# rust-test-wegbl

./: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
html/: index.html  index.js
old/: common_funcs.rs  gl_setup.rs  lib.rs
old/programs/: color_2d.rs
src/: app_state.rs  common_funcs.rs  gl_setup.rs  lib.rs
src/programs/: color_2d.rs  mod.rs
src/render/: gl_setup.rs  gl_texture.rs  mod.rs  render.rs
src/shaders/fragment/: mod.rs
src/shaders/vertex/: mod.rs
